<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">
	
	<androidx.appcompat.widget.AppCompatImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/bg"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_top"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.1" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_display_bottom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.2" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_c_bottom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.32" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_buttons_top"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.34" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_c_top"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.22" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_bottom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.75" />
	
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_start"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.05" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_buttons_end"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.67" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_c_start"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.7" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_end"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.95" />
	
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/display"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="@drawable/border"
		android:gravity="end"
		android:padding="@dimen/display_padding"
		android:textSize="@dimen/display_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_display_bottom"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_start"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top"
		tools:text="66666666666666666" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonClear"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_clear"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_c_bottom"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_c_start"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_c_top"
		app:layout_constraintVertical_bias="0.0" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonEquals"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_equals"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
		app:layout_constraintEnd_toStartOf="@+id/guideline_buttons_end"
		app:layout_constraintStart_toEndOf="@+id/buttonDot"
		app:layout_constraintTop_toBottomOf="@+id/buttonNine" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonEight"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_8"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonDot"
		app:layout_constraintEnd_toStartOf="@+id/buttonNine"
		app:layout_constraintStart_toEndOf="@+id/buttonSeven"
		app:layout_constraintTop_toBottomOf="@+id/buttonFive" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonMultiply"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_multiply"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_c_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
		tools:layout_editor_absoluteX="296dp" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonDot"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_dot"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
		app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
		app:layout_constraintStart_toEndOf="@+id/buttonZero"
		app:layout_constraintTop_toBottomOf="@+id/buttonEight" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonOne"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_1"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonFour"
		app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
		app:layout_constraintStart_toStartOf="@+id/guideline_start"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonTwo"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_2"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonFive"
		app:layout_constraintEnd_toStartOf="@+id/buttonThree"
		app:layout_constraintStart_toEndOf="@+id/buttonOne"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonFour"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_4"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
		app:layout_constraintEnd_toStartOf="@+id/buttonFive"
		app:layout_constraintStart_toStartOf="@+id/guideline_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonOne" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonZero"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_0"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
		app:layout_constraintEnd_toStartOf="@+id/buttonDot"
		app:layout_constraintStart_toStartOf="@+id/guideline_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonFive"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_5"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonEight"
		app:layout_constraintEnd_toStartOf="@+id/buttonSix"
		app:layout_constraintStart_toEndOf="@+id/buttonFour"
		app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonSix"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_6"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonNine"
		app:layout_constraintEnd_toStartOf="@+id/guideline_buttons_end"
		app:layout_constraintStart_toEndOf="@+id/buttonFive"
		app:layout_constraintTop_toBottomOf="@+id/buttonThree" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonDivide"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_divide"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_c_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
		tools:layout_editor_absoluteX="296dp" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonMinus"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_minus"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_c_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
		tools:layout_editor_absoluteX="296dp" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonNine"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_9"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
		app:layout_constraintEnd_toStartOf="@+id/guideline_buttons_end"
		app:layout_constraintStart_toEndOf="@+id/buttonEight"
		app:layout_constraintTop_toBottomOf="@+id/buttonSix" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonSeven"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_7"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonZero"
		app:layout_constraintEnd_toStartOf="@+id/buttonEight"
		app:layout_constraintStart_toStartOf="@+id/guideline_start"
		app:layout_constraintTop_toBottomOf="@+id/buttonFour" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonThree"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_3"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonSix"
		app:layout_constraintEnd_toStartOf="@+id/guideline_buttons_end"
		app:layout_constraintStart_toEndOf="@+id/buttonTwo"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/buttonPlus"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="@string/_plus"
		android:textSize="@dimen/button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
		app:layout_constraintEnd_toStartOf="@+id/guideline_end"
		app:layout_constraintStart_toStartOf="@+id/guideline_c_start"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />

</androidx.constraintlayout.widget.ConstraintLayout>
