<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">
	
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_toolbar_bottom"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_appHeaderEnd"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.67" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_buttonThemes_start"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.7" />
			
			
			<TextView
				android:id="@+id/appHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textSize="@dimen/header_textSize"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/guideline_appHeaderEnd"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/buttonDone"
				style="@style/CalculatorButton"
				android:text="@string/done"
				android:textSize="@dimen/themesButton_textSize"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/guideline_buttonThemes_start"
				app:layout_constraintTop_toTopOf="parent" />
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	
	</com.google.android.material.appbar.AppBarLayout>
	
	
	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/appCompatImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/bg"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_horizontal_toolbar_bottom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.1" />
	
	<RadioGroup
		android:id="@+id/radioGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_toolbar_bottom"
		app:layout_constraintVertical_bias="0.04000002">
		
		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/radio_theme_one"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/theme_one"
			android:textSize="@dimen/theme_radio_textSize" />
		
		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/radio_theme_two"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/theme_two"
			android:textSize="@dimen/theme_radio_textSize" />
		
		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/radio_theme_three"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/theme_three"
			android:textSize="@dimen/theme_radio_textSize" />
	
	</RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
